Age and gender detection from images

--- a/Face Recognition/Scripts/Facial expression detection.ipynb
+++ b/Face Recognition/Scripts/Facial expression detection.ipynb
@@ -1814,7 +1814,7 @@
    ],
    "source": [
     "# Capture the video from default camera\n",
-    "webcam_video_stream = cv2.VideoCapture('../Images/Testing/Charlanding.mkv')\n",
+    "webcam_video_stream = cv2.VideoCapture('../Images/Testing/modi.mp4')\n",
     "\n",
     "# Face expression model initialization\n",
     "face_exp_model = model_from_json(open(\"../Models/Facial expression model/facial_expression_model_structure.json\", \"r\").read())\n",
@@ -1972,7 +1972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
