Age gender detection video

--- a/Face Recognition/Scripts/Age and gender detection.ipynb
+++ b/Face Recognition/Scripts/Age and gender detection.ipynb
@@ -64,24 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.8.1) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\dnn\\src\\layers\\fully_connected_layer.cpp:219: error: (-215:Assertion failed) srcMat.dims == 2 && srcMat.cols == weights.cols && dstMat.rows == srcMat.rows && dstMat.cols == weights.rows && srcMat.type() == weights.type() && weights.type() == dstMat.type() && srcMat.type() == CV_32F && (biasMat.empty() || (biasMat.type() == srcMat.type() && biasMat.isContinuous() && (int)biasMat.total() == dstMat.cols)) in function 'cv::dnn::FullyConnectedLayerImpl::FullyConnected::run'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 46\u001b[0m\n\u001b[0;32m     43\u001b[0m gender_cov_net\u001b[39m.\u001b[39msetInput(current_face_image_blob) \n\u001b[0;32m     45\u001b[0m \u001b[39m# Get gender predictions and get label of maximum value returned item\u001b[39;00m\n\u001b[1;32m---> 46\u001b[0m gender_predictions \u001b[39m=\u001b[39m gender_cov_net\u001b[39m.\u001b[39;49mforward()\n\u001b[0;32m     47\u001b[0m gender \u001b[39m=\u001b[39m gender_label_list[gender_predictions[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39margmax()]\n\u001b[0;32m     49\u001b[0m \u001b[39m##################### Age #####################\u001b[39;00m\n\u001b[0;32m     50\u001b[0m \n\u001b[0;32m     51\u001b[0m \u001b[39m# Declare age labels, protext and caffemodel file paths\u001b[39;00m\n",
-      "\u001b[1;31merror\u001b[0m: OpenCV(4.8.1) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\dnn\\src\\layers\\fully_connected_layer.cpp:219: error: (-215:Assertion failed) srcMat.dims == 2 && srcMat.cols == weights.cols && dstMat.rows == srcMat.rows && dstMat.cols == weights.rows && srcMat.type() == weights.type() && weights.type() == dstMat.type() && srcMat.type() == CV_32F && (biasMat.empty() || (biasMat.type() == srcMat.type() && biasMat.isContinuous() && (int)biasMat.total() == dstMat.cols)) in function 'cv::dnn::FullyConnectedLayerImpl::FullyConnected::run'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the default webcam video\n",
-    "webcam_video_stream = cv2.VideoCapture('../Images/Testing/modi.mp4')\n",
+    "webcam_video_stream = cv2.VideoCapture(0)\n",
     "\n",
     "# Initialize empty array for face locations\n",
     "all_face_locations = []\n",
@@ -111,7 +99,7 @@
     "        Age_Gender_Model_Mean_Values = (78.4263377603, 87.7689143744, 114.895847746)\n",
     "\n",
     "        # Create the binary large object (blob) of our face slice\n",
-    "        current_face_image_blob = cv2.dnn.blobFromImage(current_face_image, 1, (277, 277), Age_Gender_Model_Mean_Values)\n",
+    "        current_face_image_blob = cv2.dnn.blobFromImage(current_face_image, 1, (227, 227), Age_Gender_Model_Mean_Values)\n",
     "\n",
     "        ##################### Gender #####################\n",
     "\n",
@@ -263,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
