--- a/Face Recognition/Scripts/Face recognition.ipynb
+++ b/Face Recognition/Scripts/Face recognition.ipynb
@@ -208,7 +208,7 @@
     "# Release the stream and cam\n",
     "# Close all opencv windows open\n",
     "webcam_video_stream.release()\n",
-    "cv2.destroyAllWindows()"
+    "cv2.destroyAllWindows()\n"
    ]
   }
  ],
