Face recognition in video

--- a/Face Recognition/Scripts/Age and gender detection.ipynb
+++ b/Face Recognition/Scripts/Age and gender detection.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
     "    # Resize the current frame to 1/4 size to proces faster\n",
     "    current_frame_small = cv2.resize(current_frame, (0, 0), fx = 0.25, fy = 0.25)\n",
     "    # Detect all faces in the image\n",
-    "    all_face_locations = face_recognition.face_locations(current_frame_small, model = \"hog\")\n",
+    "    all_face_locations = face_recognition.face_locations(current_frame_small, model = \"cnn\")\n",
     "\n",
     "    # Looping through the face locations\n",
     "    for index, current_face_location in enumerate(all_face_locations):\n",
