--- a/Face Recognition/Scripts/Face recognition.ipynb
+++ b/Face Recognition/Scripts/Face recognition.ipynb
@@ -62,9 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 2 number of face in this image\n"
+     ]
+    }
+   ],
    "source": [
     "# Loading the image to detect\n",
     "original_image = cv2.imread('../Images/Testing/Dufflo and Banerjee.jpg')\n",
@@ -128,17 +136,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 2 number of face in this image\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Capture the video from default camera\n",
     "webcam_video_stream = cv2.VideoCapture(0)\n",
@@ -172,7 +172,7 @@
     "    # Resize the current frame to 1/4 size to proces faster\n",
     "    current_frame_small = cv2.resize(current_frame, (0, 0), fx = 0.25, fy = 0.25)\n",
     "    # Detect all faces in the image\n",
-    "    all_face_locations = face_recognition.face_locations(current_frame_small, 2, model = \"hog\")\n",
+    "    all_face_locations = face_recognition.face_locations(current_frame_small, 1, model = \"cnn\")\n",
     "    # Find all the faces and encodings in the unknown image\n",
     "    all_face_encodings = face_recognition.face_encodings(current_frame_small, all_face_locations)\n",
     "\n",
@@ -202,13 +202,11 @@
     "        # Display the image\n",
     "        cv2.imshow(\"Webcam video\", current_frame)\n",
     "\n",
-    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "            break\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
     "\n",
-    "# Release the stream and cam\n",
-    "# Close all opencv windows open\n",
     "webcam_video_stream.release()\n",
-    "cv2.destroyAllWindows()\n"
+    "cv2.destroyAllWindows() "
    ]
   }
  ],
@@ -228,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
